--- a/fcc-tribute.css
+++ b/fcc-tribute.css
@@ -6,7 +6,7 @@ header {
   text-align: center;
 }
 
-button {
+.darkmode-button {
   font-family: "Space Grotesk", sans-serif;
   height: auto;
   width: auto;
