--- a/fcc-tribute.css
+++ b/fcc-tribute.css
@@ -79,10 +79,13 @@ ul {
   font-size: 19px;
 }
 
-	footer {
+footer {
     margin-top: 65px;
 }
 
+ hr {
+   width: 700px;
+}
 h5 {
   font-size: 16px;
   font-family:'Source Serif Pro', serif;
