--- a/fcc-tribute.css
+++ b/fcc-tribute.css
@@ -6,6 +6,14 @@ header {
   text-align: center;
 }
 
+.source-code {
+  font-size: 16px;
+ font-family: 'Source Serif Pro', serif;
+ font-weight: bold;
+ text-align: center;
+ vertical-align: middle; 
+}
+
 button {
   font-family: "Space Grotesk", sans-serif;
   height: auto;
@@ -13,6 +21,11 @@ button {
   padding: 5px;
   border-radius: 5px;
   background-color: white;
+ cursor: pointer;
+}
+
+.code-button {
+    border-color: rgb(223, 66, 139); 
 }
 
 .darkmode-button:hover {
