--- a/fcc-tribute.css
+++ b/fcc-tribute.css
@@ -64,12 +64,13 @@ figcaption {
   max-height: none;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: 5px 4px 8px 0 rgba(0,0,0,0.3);
+  box-shadow: 7px 4px 8px 0 rgba(64,150,150,0.3);
   transition: 0.3s;
+  border-radius: 8px 8px 8px 8px;
 }
 
 #image:hover {
-  box-shadow: 10px 8px 16px rgba(0,0,0,0.4);
+  box-shadow: 12px 8px 16px rgba(64,150,150,0.4);
 }
 
 p {
